[package]
name = "benchmark_obj"
version = "0.1.0"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]


[dev-dependencies]
criterion = "0.3.2"
wavefront_obj = "7.0.0"


[[bench]]
name = "benchmark_teapot_1"
harness = false

[[bench]]
name = "benchmark_teapot_2"
harness = false

[[bench]]
name = "benchmark_piston"
harness = false