[package]
name = "benchmark_obj"
version = "0.1.0"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
wavefront_obj = { git = "https://github.com/lambdaxymox/wavefront-obj" }
piston_obj = { version = "7.0.0", git = "https://github.com/lambdaxymox/piston_obj" }

[dev-dependencies]
criterion = "0.3.2"


[[bench]]
name = "benchmark_teapot"
harness = false

[[bench]]
name = "benchmark_piston"
harness = false